--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -27,9 +27,9 @@
 \usepackage[latin1]{inputenc}
 %\usepackage{lmodern}		% Latin Modern
 % \usepackage{type1ec}           % cm-super
-\usepackage[OT2, T1]{fontenc}        % T1-Schriften notwendig für PDFs
+\usepackage[T1]{fontenc}        % T1-Schriften notwendig für PDFs
                                      % OT2 fuer kyrillische Zeichen
-\usepackage[russian,ngerman]{babel}
+\usepackage[ngerman]{babel}
 \usepackage{textcomp}           % wird benötigt, damit der \textbullet
                                 % für itemize in lmodern gefunden wird.
 
@@ -129,8 +129,16 @@
 \newcommand*{\MH}{\mathbb{H}}
 \newcommand*{\MO}{\mathbb{O}}
 \newcommand*{\F}{\mathbb{F}}
-\newcommand*{\U}{\mathbb{U}}
+\newcommand*{\UU}{\mathbb{U}}
 \newcommand*{\PP}{\mathbb{P}}
+\newcommand*{\fa}{\mathfrak{a}}
+\newcommand*{\fb}{\mathfrak{b}}
+\newcommand*{\fg}{\mathfrak{g}}
+\newcommand*{\fm}{\mathfrak{m}}
+\newcommand*{\fp}{\mathfrak{p}}
+\newcommand*{\fq}{\mathfrak{q}}
+\newcommand*{\fs}{\mathfrak{s}}
+\newcommand*{\ft}{\mathfrak{t}}
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -383,7 +391,7 @@ Wir verabreden folgende Bezeichnungen:
    \item Matrizengruppen: $\GL(n, \R), \SL(n,\R), \GL(n,\C), \SL(n,\C),
     \F_{2}=\{0,1\}, \GL(n,\F_{2}), \abs{\GL(2,\F_{2})}=6, \abs{\GL(n,
     \F_{2})}= (2^{n}-1)(2^{n}-2)(2^{n}-4)\dotso (2^{n}-2^{n-1}), \MO(n),
-    \U(n)$. Die letzten beiden sind die orthogonalen ($A^{T}A=I$) und unitären
+    \UU(n)$. Die letzten beiden sind die orthogonalen ($A^{T}A=I$) und unitären
     Matrizen. Diese Gruppen sind kompakt.
    \item Arithmetische Gruppen: $\GL(n,\Z)=\{g\in\GL(n,\R)\colon g_{ij}\in\Z,
     \det g=\pm 1\}$ und $\SL(n,\Z)= \{g\in\GL(n, \Z)\colon \det g=1\}$.
@@ -1851,16 +1859,16 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 
 %Vorlesung vom 2007-11-28
 \begin{fakt}
-  Seien $\a, \b$ Ideale in $A$. Dann ist
+  Seien $\fa, \fb$ Ideale in $A$. Dann ist
   \begin{gather*}
-    \a\b\coloneqq\{\sum_{i=1}^{r} a_{i}b_{i}\colon a_{i}\in\a, b_{i}\in\b,
+    \fa\fb\coloneqq\{\sum_{i=1}^{r} a_{i}b_{i}\colon a_{i}\in\fa, b_{i}\in\fb,
        r\in\N^{*}\}
   \end{gather*}
   wieder ein Ideal in $A$.
 \end{fakt}
 
 \begin{bemerk}
-  Im Allgemeinen ist $\{ab\colon a\in\a, b\in\b\}$ kein Ideal.
+  Im Allgemeinen ist $\{ab\colon a\in\fa, b\in\fb\}$ kein Ideal.
 \end{bemerk}
 
 \begin{bsp}
@@ -1869,30 +1877,30 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 \end{bsp}
 
 \begin{bemerk}
-  Der Durchschnitt von Idealen ist stets ein Ideal. Es gilt, $\a\b\subseteq
-  \a\cap\b$. Im Allgemeinen herrscht keine Gleichheit.
+  Der Durchschnitt von Idealen ist stets ein Ideal. Es gilt, $\fa\fb\subseteq
+  \fa\cap\fb$. Im Allgemeinen herrscht keine Gleichheit.
 \end{bemerk}
 
 \paragraph{Der Faktorring nach einem Ideal}
-Sei $\a\subseteq A$ ein Ideal, $\a\neq A$ und $A/_{\a}$ die Faktorgruppe
-bezüglich $+$. Wir prägen $A/_{\a}$ eine Multiplikation auf via
+Sei $\fa\subseteq A$ ein Ideal, $\fa\neq A$ und $A/_{\fa}$ die Faktorgruppe
+bezüglich $+$. Wir prägen $A/_{\fa}$ eine Multiplikation auf via
 \begin{gather*}
-  (x+\a)(y+\a)\coloneqq xy+\a
+  (x+\fa)(y+\fa)\coloneqq xy+\fa
 \end{gather*}
 
 \begin{fakt}
   \begin{enumerate}[(i)]
-   \item Mit diesem Fakt wird $A/_{\a}$ zu einem kommutativen Ring mit 1.
-   \item Die kanonische Abbildung $A\rightarrow A/_{\a}$ ist surjektiver
-    Ringhomomorphismus. Der Kern ist $\a$.
+   \item Mit diesem Fakt wird $A/_{\fa}$ zu einem kommutativen Ring mit 1.
+   \item Die kanonische Abbildung $A\rightarrow A/_{\fa}$ ist surjektiver
+    Ringhomomorphismus. Der Kern ist $\fa$.
   \end{enumerate}
   \begin{proof}
-    Korrektheit der Definition: Sei $x+\a=x'+\a, y+\a=y'+\a$. Dann folgt:
-    $x'=x+a, y'=y+a$ mit $a\in\a, b\in\b$. Es ist $x'y'=
-    (x+a)(y+b)=xy+\underbrace{ay+ bx+ab}_{\in\a}$.
+    Korrektheit der Definition: Sei $x+\fa=x'+\fa, y+\fa=y'+\fa$. Dann folgt:
+    $x'=x+a, y'=y+a$ mit $a\in\fa, b\in\fb$. Es ist $x'y'=
+    (x+a)(y+b)=xy+\underbrace{ay+ bx+ab}_{\in\fa}$.
 
     Die Assoziativität ist, wie auch die Distributivität und die
-    Kommutativität klar. Das Einselement ist $1+\a$. Damit ist der erste Punkt
+    Kommutativität klar. Das Einselement ist $1+\fa$. Damit ist der erste Punkt
     des Fakts abgeschlossen.
 
     Der zweite Punkt ist aber auch klar. Die Multiplikation verträgt sich
@@ -1912,14 +1920,14 @@ bezüglich $+$. Wir prägen $A/_{\a}$ eine Multiplikation auf via
 
 % satz1
 \begin{satzMN}[Homomorphiessatz]
-  Sei $f\colon A\rightarrow B$ ein Ringhomomorphismus und $\a=\ker(f)$. Dann
-  existiert genau ein Homomorphismus $f_{*}\colon A/_{\a}\rightarrow B$,
+  Sei $f\colon A\rightarrow B$ ein Ringhomomorphismus und $\fa=\ker(f)$. Dann
+  existiert genau ein Homomorphismus $f_{*}\colon A/_{\fa}\rightarrow B$,
   welcher das folgende Diagramm kommutativ ergänzt:
       \begin{gather*}
     \begin{xy}
       \xymatrix{
       A \ar[rr]^{f} \ar[rd]_{\text{kan}} & & B\ar@{<.}[dl]^{f_{*}}\\
-      & A/_{\a} &
+      & A/_{\fa} &
 	}
     \end{xy}
   \end{gather*}
@@ -1927,25 +1935,25 @@ bezüglich $+$. Wir prägen $A/_{\a}$ eine Multiplikation auf via
   \begin{proof}
     Für die unterliegenden additiven Gruppen ist der Satz bereits bewiesen.
     \todo{Link einfügen} Nun ist noch zu zeigen: $f_{*}$ ist
-    Ringhomomorphismus: $f_{*}(x+\a)=f(x)$. Somit ist $f_{*}((x+\a)(y+\a))=
-    f_{*}(xy+\a)=f(xy)$ und $f_{*}(x+\a)f_{*}(y+\a)=f(x)f(y)= f(xy)$.
+    Ringhomomorphismus: $f_{*}(x+\fa)=f(x)$. Somit ist $f_{*}((x+\fa)(y+\fa))=
+    f_{*}(xy+\fa)=f(xy)$ und $f_{*}(x+\fa)f_{*}(y+\fa)=f(x)f(y)= f(xy)$.
   \end{proof}
 \end{satzMN}
 
 \begin{fakt}
   Sei $f\colon A\rightarrow B$ ein Ringhomomorphismus.
   \begin{enumerate}[(i)]
-   \item Sei $\a\subseteq A$ ein Ideal. Dann ist $f(\a)$ ein Ideal in $f(A)$.
-    Denn sei $a\in\a\Rightarrow f(a)\in f(\a), x\in f(A)\Rightarrow x=f(y),
-    y\in A, f(a)f(y)= f(ay)\in f(\a)$.
-   \item Sei $\b\subseteq B$ ein Ideal. Dann ist $f^{-1}(b)$ ein Ideal in $A$.
-    Denn sei $x\in A, y\in f^{-1}(b)\Rightarrow f(y)\in \b\Rightarrow f(x)f(y)=
-    f(xy)\in\b\Rightarrow xy\in f^{-1}(\b)$
+   \item Sei $\fa\subseteq A$ ein Ideal. Dann ist $f(\fa)$ ein Ideal in $f(A)$.
+    Denn sei $a\in\fa\Rightarrow f(a)\in f(\fa), x\in f(A)\Rightarrow x=f(y),
+    y\in A, f(a)f(y)= f(ay)\in f(\fa)$.
+   \item Sei $\fb\subseteq B$ ein Ideal. Dann ist $f^{-1}(b)$ ein Ideal in $A$.
+    Denn sei $x\in A, y\in f^{-1}(b)\Rightarrow f(y)\in \fb\Rightarrow f(x)f(y)=
+    f(xy)\in\fb\Rightarrow xy\in f^{-1}(\fb)$
   \end{enumerate}
 \end{fakt}
 
 \begin{bsp}
-  Die Abbildung $f\colon\Z\rightarrow\Q$ zeigt, dass $f(\a)$ im Allgemeinen
+  Die Abbildung $f\colon\Z\rightarrow\Q$ zeigt, dass $f(\fa)$ im Allgemeinen
   kein Ideal in $B$ ist.
 \end{bsp}
 
@@ -1976,18 +1984,18 @@ $xy=0$.
 
 \begin{defini}
   \begin{enumerate}
-   \item Ein Ideal $\g\subseteq A$ mit $\g\neq A$ heißt \highl{Primideal},
-    wenn $A/_{\g}$ integer ist.
-   \item Ein Ideal $\m\subseteq A$ mit $\m\neq A$ heißt
-    \highl[Ideal!maximales]{maximales Ideal}, wenn $\m$ maximal ist und
-    $\m\subseteq\a\subseteq A \Rightarrow\a=\m$ oder $\a=A$.
+   \item Ein Ideal $\fg\subseteq A$ mit $\fg\neq A$ heißt \highl{Primideal},
+    wenn $A/_{\fg}$ integer ist.
+   \item Ein Ideal $\fm\subseteq A$ mit $\fm\neq A$ heißt
+    \highl[Ideal!maximales]{maximales Ideal}, wenn $\fm$ maximal ist und
+    $\fm\subseteq\fa\subseteq A \Rightarrow\fa=\fm$ oder $\fa=A$.
   \end{enumerate}
 \end{defini}
 
 \begin{bemerk}
   \begin{enumerate}
-   \item Ein Ideal $\g\subseteq A$ ist prim, genau dann, wenn $\forall x,y\in
-    A\colon xy\in\g\Rightarrow x\in\g$ oder $y\in\g$.
+   \item Ein Ideal $\fg\subseteq A$ ist prim, genau dann, wenn $\forall x,y\in
+    A\colon xy\in\fg\Rightarrow x\in\fg$ oder $y\in\fg$.
    \item Sei $A=\Z$. Die Primideale sind genau $(p)$ mit $p\in\PP$ und $(0)$.
     Dabei sind die Ideale $(p)$ maximal.
    \item Das von der 0 erzeugte Hauptideale ist genau dann ein Primideal, wenn
@@ -1998,51 +2006,51 @@ $xy=0$.
 \begin{fakt}
   Jedes maximale Ideal ist ein Primideal.
   \begin{proof}
-    Sei $\m\in A$ ein maximales Ideal und $xy\in\m$ mit $x\notin\m$. Wir
-    bilden das Ideal $(x)+\m$. Es gilt natürlich: $\m\subseteq (x)+\m\subseteq
-    A$ und $(x)+\m\neq\m$. Also ist $(x)+\m=A\Rightarrow1=ax+b$ mit $a\in A,
-    b\in\m$. Weiter folgt $y=axy+by\in\m$.
+    Sei $\fm\in A$ ein maximales Ideal und $xy\in\fm$ mit $x\notin\fm$. Wir
+    bilden das Ideal $(x)+\fm$. Es gilt natürlich: $\fm\subseteq (x)+\fm\subseteq
+    A$ und $(x)+\fm\neq\fm$. Also ist $(x)+\fm=A\Rightarrow1=ax+b$ mit $a\in A,
+    b\in\fm$. Weiter folgt $y=axy+by\in\fm$.
   \end{proof}
 \end{fakt}
 
 \begin{fakt}
-  Es ist $\m\subseteq A$ maximales Ideal, genau dann, wenn $A/_{\m}$ ein
+  Es ist $\fm\subseteq A$ maximales Ideal, genau dann, wenn $A/_{\fm}$ ein
   Körper ist.
   \begin{proof}
     \begin{itemize}
-     \item["`$\Rightarrow$"'] Sei $A\rightarrow A/_{\m},
-      x\mapsto\overline{x}$. Sei $\overline{x}\in A/_{\m}$ mit
+     \item["`$\Rightarrow$"'] Sei $A\rightarrow A/_{\fm},
+      x\mapsto\overline{x}$. Sei $\overline{x}\in A/_{\fm}$ mit
       $\overline{x}\neq0$ und suchen Inverses bezüglich Multiplikation. Sei
       dazu $x\in A$ ein Repräsentant von $\overline{x}$. Dann gilt
-      $x\notin\m$. Wie oben folgt, $(x)+\m=A$. Also $1=ax+b$ mit $a\in\a, b\in
-      \m\Rightarrow\overline{1}=\overline{a}\overline{x}$.
-     \item["`$\Leftarrow$"'] Sei $A/_{\m}$ ein Körper und $\a$ ein Ideal mit
-      $\m\subseteq\a\subseteq A$. Weiter sei $\a\neq\m$. Dann ist
-      $\overline{x}\neq\overline{0}$ in $A/_{\m}$. Also existiert $y\in A$ mit
+      $x\notin\fm$. Wie oben folgt, $(x)+\fm=A$. Also $1=ax+b$ mit $a\in\fa, b\in
+      \fm\Rightarrow\overline{1}=\overline{a}\overline{x}$.
+     \item["`$\Leftarrow$"'] Sei $A/_{\fm}$ ein Körper und $\fa$ ein Ideal mit
+      $\fm\subseteq\fa\subseteq A$. Weiter sei $\fa\neq\fm$. Dann ist
+      $\overline{x}\neq\overline{0}$ in $A/_{\fm}$. Also existiert $y\in A$ mit
       $\overline{x}\cdot\overline{y}= \overline{1}$. Das heißt $xy= 1+u$ mit
-      $u\in\m$. Folglich $1=xy-u\in\a$. Das zeigt, $\a=A$.
+      $u\in\fm$. Folglich $1=xy-u\in\fa$. Das zeigt, $\fa=A$.
     \end{itemize}
   \end{proof}
 \end{fakt}
 
 \begin{fakt}
-  Sei $f\colon A\rightarrow B$ ein Homomorphismus von Ringen und $\g'\subseteq
-  B$ prim. Dann ist $\g= f^{-1(\g')}$ auch prim.
+  Sei $f\colon A\rightarrow B$ ein Homomorphismus von Ringen und $\fg'\subseteq
+  B$ prim. Dann ist $\fg= f^{-1(\fg')}$ auch prim.
   \begin{proof}
-    Sei $xy\in \g$. Dann folgt: $f(xy)\in\g'\Rightarrow
-    f(x)f(y)\in\g'\Rightarrow f(x)\in\g'$ oder $f(y)\in\g'\Rightarrow x\in\g$
-    oder $y\in\g$.
+    Sei $xy\in \fg$. Dann folgt: $f(xy)\in\fg'\Rightarrow
+    f(x)f(y)\in\fg'\Rightarrow f(x)\in\fg'$ oder $f(y)\in\fg'\Rightarrow x\in\fg$
+    oder $y\in\fg$.
   \end{proof}
 \end{fakt}
 
 \begin{fakt}
   Sei $f\colon A\rightarrow B$ ein surjektiver Homomorphismus und
-  $\m'\subseteq B$ maximal. Dann ist $\m=f^{-1}(\m')$ maximales Ideal in $A$.
+  $\fm'\subseteq B$ maximal. Dann ist $\fm=f^{-1}(\fm')$ maximales Ideal in $A$.
   \begin{proof}
-    Sei $A\xrightarrow{f} B \xrightarrow{\text{kan}} B/_{\m'}$. Der Kern dieses
-    Homomorphismus ist $\m=f^{-1}(\m')$. Also erhält man aus dem
-    Homomorphiessatz einen Isomorphismus: $f_{*}\colon A/_{\m}\rightarrow
-    B/_{\m'}$. Damit ist auch $A/_{\m}$ ein Körper.
+    Sei $A\xrightarrow{f} B \xrightarrow{\text{kan}} B/_{\fm'}$. Der Kern dieses
+    Homomorphismus ist $\fm=f^{-1}(\fm')$. Also erhält man aus dem
+    Homomorphiessatz einen Isomorphismus: $f_{*}\colon A/_{\fm}\rightarrow
+    B/_{\fm'}$. Damit ist auch $A/_{\fm}$ ein Körper.
   \end{proof}
 \end{fakt}
 
@@ -2051,11 +2059,11 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
 
 \begin{bsp}
   \begin{enumerate}
-   \item Sei $\a=(0)\subseteq\Z$. Dies ist ein Primideal. Aber das Bild von
-    $\a$ in $\Z/_{(m)}$ ist nur dann ein Primideal, wenn $m=\pm p$ mit
+   \item Sei $\fa=(0)\subseteq\Z$. Dies ist ein Primideal. Aber das Bild von
+    $\fa$ in $\Z/_{(m)}$ ist nur dann ein Primideal, wenn $m=\pm p$ mit
     $p\in\PP$.
-   \item Sei $\a=(p)\subseteq\Z$ mit $p\in\PP$. Dies ist maximal. Das Bild von
-    $\a$ in $\Z/_{(m)}$ ist der ganze Ring, falls $p\nmid m$
+   \item Sei $\fa=(p)\subseteq\Z$ mit $p\in\PP$. Dies ist maximal. Das Bild von
+    $\fa$ in $\Z/_{(m)}$ ist der ganze Ring, falls $p\nmid m$
     \todo{Zeichen einfügen}. Ist also kein maximales Ideal. Man beachte:
     $\Z\rightarrow\Z/_{(m)}$ ist surjektiv.
   \end{enumerate}
@@ -2106,10 +2114,10 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
   \begin{fakt}
     $\Z[i]$ ist ein Hauptidealring.
     \begin{proof}
-      Sei $0\neq\a\subseteq\Z[i]$ ein Ideal, $m\neq0$ ein Element aus $\a$ mit
-      minimaler Norm. Weiter sei $x\in\a$ beliebig nach der oben bewiesenen
+      Sei $0\neq\fa\subseteq\Z[i]$ ein Ideal, $m\neq0$ ein Element aus $\fa$ mit
+      minimaler Norm. Weiter sei $x\in\fa$ beliebig nach der oben bewiesenen
       Behauptung ist $x=am+r$ mit $0\leq N(r)<N(m)\Rightarrow r\in
-      \a\Rightarrow N(r)=0\Rightarrow r=0\Rightarrow\a=(m)$.
+      \fa\Rightarrow N(r)=0\Rightarrow r=0\Rightarrow\fa=(m)$.
     \end{proof}
   \end{fakt}
  \item $A=\Z[\sqrt{-5}]= \{a+b\sqrt{-5}\colon a,b\in\Z\}$.\\
@@ -2129,17 +2137,17 @@ Allgemeinen nicht prim (maximal), selbst für surjektive Homomorphismen.
 
   Wir haben 4 Primzahlen gefunden. Diese unterscheiden sich nicht nur um
   Vorzeichen. Der Gag: $21=3\cdot7= (4+\sqrt{-5})(4-\sqrt{-5})$. Man kann
-  zeigen: Ist $\g=(3)+(4+\sqrt{-5}), \q=(3)+(4-\sqrt{-5}), \s=
-  (7)+(4+\sqrt{-5}), \t= (7)+(4-\sqrt{-5})$, so gilt: $(3)=\g\q, (7)=\s\t,
-  (4+\sqrt{-5})= \g\s, (4-\sqrt{-5})= \q\t, (21)= \g\q\s\t$.
+  zeigen: Ist $\fg=(3)+(4+\sqrt{-5}), \fq=(3)+(4-\sqrt{-5}), \fs=
+  (7)+(4+\sqrt{-5}), \ft= (7)+(4-\sqrt{-5})$, so gilt: $(3)=\fg\fq, (7)=\fs\ft,
+  (4+\sqrt{-5})= \fg\fs, (4-\sqrt{-5})= \fq\ft, (21)= \fg\fq\fs\ft$.
 
-  Wir zeigen, $\g$ ist kein Hauptideal. Der Beweis erfolgt indirekt: $\g=(m),
-  m\in\Z[\sqrt{-5}]$. Dann folgt, alle Elemente aus $\g$ haben eine durch
+  Wir zeigen, $\fg$ ist kein Hauptideal. Der Beweis erfolgt indirekt: $\fg=(m),
+  m\in\Z[\sqrt{-5}]$. Dann folgt, alle Elemente aus $\fg$ haben eine durch
   $N(m)$ teilbare Norm. Also teilt $N(m)$ sowohl $N(3)=9$ als auch
   $N(4+\sqrt{-5})\Rightarrow N(m)=1$ oder 3.
 
   Sei nun $m=a+b\sqrt{-5}, N(m)= a^{2}+5b^{2}=3$\lightning{}. Sei
-  $N(m)=1\Rightarrow m=\pm1$, setzen $m=1$. Also $\g=A\Rightarrow1= 3x+
+  $N(m)=1\Rightarrow m=\pm1$, setzen $m=1$. Also $\fg=A\Rightarrow1= 3x+
   (4+\sqrt{-5})y$ für $x,y\in A$. Es folgt: $1=3(a+b\sqrt{-5})+
   (4+\sqrt{-5})(c+d\sqrt{-5})$ mit $a,b,c,d\in\Z\Rightarrow1=
   (3a+4c-5d)(3b+c+4d)\sqrt{-5}$. Also hat man zwei Gleichungen aus den ganzen
@@ -2199,9 +2207,9 @@ Sei $A$ integer.
       derjenigen Hauptideale, deren Erzeuger \emph{keine} Zerlegung in
       Primelemente besitzen. Weiter sei
       $(a_{1})\subseteq(a_{2})\subseteq\dotso$ eine aufsteigende Folge in
-      $\S$, $\a= \bigcup_{i=1}^{\infty} (a_{i})$ ein Ideal, also $\a= (a)$.
-      Wegen $a\in\a$ existiert ein Index $i_{0}$, so dass $a\in(a_{i_{0}})$.
-      Somit haben wir $\a\subseteq(a_{i_{0}})\subseteq\a$. Es folgt, dass jede
+      $\S$, $\fa= \bigcup_{i=1}^{\infty} (a_{i})$ ein Ideal, also $\fa= (a)$.
+      Wegen $a\in\fa$ existiert ein Index $i_{0}$, so dass $a\in(a_{i_{0}})$.
+      Somit haben wir $\fa\subseteq(a_{i_{0}})\subseteq\fa$. Es folgt, dass jede
       aufsteigende Folge in $\S$ stabilisiert sich und in $\S$ gibt es
       maximale Elemente: Sei $(a_{1})\in\S$ nicht maximal $\Rightarrow\exists
       (a_{2})\supsetneq(a_{1})$ usw. Also eine aufsteigende Kette, die sich nicht
